Linux: Fix some NULL versus 0 issues to appease gcc-4.5.

Patch is 99% the same as spotrh's version (thanks spot!) except
for the use of gfx::kNullPluginWindow in this version.

BUG=49533

Review URL: http://codereview.chromium.org/3014034

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@53788 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 5d7bc9ee7ca6ef8c488683368c95416e31787ae8